--- a/css-marker-pseudo-element.html
+++ b/css-marker-pseudo-element.html
@@ -62,7 +62,7 @@
         line-height: 0.8;
       }
       /* using font-awesome for content */
-      .custom-marker > ::marker {
+      .custom-marker-anchor > ::marker {
         color: var(--clr-primary);
         font-size: 1em;
         content: "\f13d";
@@ -70,7 +70,15 @@
         font-weight: 700;
       }
 
-      /* using a word as a content content */
+      .custom-marker-arrow > ::marker {
+        color: var(--clr-primary);
+        font-size: 1em;
+        content: "\f061";
+        font-family: "Font Awesome 5 Free";
+        font-weight: 700;
+      }
+
+      /* using a word as a contentr content */
       .second-custom-marker > ::marker {
         color: var(--clr-primary);
         font-size: 1em;
@@ -79,7 +87,8 @@
         font-weight: 700;
       }
 
-      .custom-marker > li,
+      .custom-marker-anchor > li,
+      .custom-marker-arrow > li,
       .second-custom-marker > li {
         padding-left: 0.5em;
       }
@@ -88,13 +97,15 @@
   <body>
     <div class="content flow">
       <h1 class="title">CSS <code>::marker</code></h1>
-      <p>
-        Lorem ipsum dolor, <a href="#">sit amet consectetur</a> adipisicing
-        elit. Aliquid sapiente perferendis nulla sed consequuntur eveniet.
-        Itaque veritatis qui labore quia odio nihil, magni soluta facilis
-        necessitatibus cumque repellendus optio laborum.
-      </p>
-      <ul class="custom-marker">
+      <p>Example of Pseudo elements using the ::marker Pseudo Element:</p>
+      <ul class="custom-marker-anchor">
+        <li>Lorem ipsum dolor sit amet consectetur.</li>
+        <li>Ipsam quam repudiandae sapiente ratione odit?</li>
+        <li>Ad vitae vel nihil quibusdam quidem.</li>
+        <li>Non enim molestiae aspernatur blanditiis porro?</li>
+        <li>Eum laudantium repellendus laborum in culpa?</li>
+      </ul>
+      <ul class="custom-marker-arrow">
         <li>Lorem ipsum dolor sit amet consectetur.</li>
         <li>Ipsam quam repudiandae sapiente ratione odit?</li>
         <li>Ad vitae vel nihil quibusdam quidem.</li>
@@ -115,10 +126,10 @@
         itaque natus.
       </p>
       <p>
-        Provident quaerat debitis non culpa nam veritatis quod deserunt, ex
-        accusantium sapiente obcaecati esse amet, quibusdam exercitationem vitae
-        sint dolorem accusamus! Fuga mollitia cupiditate facere itaque, illum
-        dolorum recusandae explicabo!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vitae
+        debitis suscipit quos fuga corporis eos. Modi, provident perspiciatis,
+        dicta voluptate expedita fugit eligendi, corrupti optio voluptates odit
+        numquam explicabo.
       </p>
     </div>
   </body>
