class namings changes

--- a/css-marker-pseudo-element.html
+++ b/css-marker-pseudo-element.html
@@ -79,7 +79,7 @@
       }
 
       /* using a word as a contentr content */
-      .second-custom-marker > ::marker {
+      .custom-marker-word > ::marker {
         color: var(--clr-primary);
         font-size: 1em;
         content: "Bullet";
@@ -112,7 +112,7 @@
         <li>Non enim molestiae aspernatur blanditiis porro?</li>
         <li>Eum laudantium repellendus laborum in culpa?</li>
       </ul>
-      <ul class="second-custom-marker">
+      <ul class="custom-marker-word">
         <li>Lorem ipsum dolor sit amet consectetur.</li>
         <li>Ipsam quam repudiandae sapiente ratione odit?</li>
         <li>Ad vitae vel nihil quibusdam quidem.</li>
